# SPN-Benchmark-DS

./: .coveragerc  .gitignore  AGENTS.md  AnalyzeSPN.py  Dockerfile  GPU_ACCELERATION_INVESTIGATION.md  ObtainGridDS.py  README.md  SPNGenerate.py  StatisticsDS.py  VisualData.py  analysis.py  augment_data.py  benchmark.py  benchmark_bfs.py  benchmark_full.py  benchmark_petri.py  benchmark_petri_opt.py  environment.yml  example_jsonl_consumer.py  fix_tests.py  generate_statistics.py  interactive_generator.py  main_spn_grid_data.py  main_spn_rand_data.py  profile_arrgra.py  profile_arrgra2.py  profile_arrgra3.py  profile_arrgra_cqp.py  profile_arrgra_cqp2.py  profile_arrgra_cqp3.py  profile_arrgra_cqp4.py  profile_arrgra_cqp5.py  profile_arrgra_cqp7.py  profile_cqp.py  profile_cqp2.py  profile_dt.py  profile_dt2.py  profile_dt3.py  profile_dt4.py  (+35 more)
.jules/: bolt.md
DataGenerate/: ArrivableGraph.py  DataTransformation.py  PetriGenerate.py  README.md  SPN.py  wherevec.pyx
DataVisualization/: Visual.py
GNNs/datasets/: BasicDatasets.py  NetLearningDatasetDGL.py  PackagedData.py  test.py
GNNs/layers/: BasicLayers.py  GCNLayers.py  MPNNLayers.py  Meta_layers.py  mlp_readout_layer.py
GNNs/nets/: BasicGNNNets.py  BasicMLPs.py  CNNNet.py  GCNNet.py  MLPNet.py  MPNNNet.py  MetaNet.py  load_net.py
GNNs/train/: metrics.py  train_graph_regression.py
SPN_Benchmarks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bench_data/data_hdf5/: benchmark_dataset.hdf5
benchmarks/: benchmark.py  benchmark.toml  plot_benchmarks.py
config/: gnn_config.toml
config/DataConfig/: Augmentation.toml  CONFIG_OPTIONS.md  PartitionGrid.toml  SPNGenerate.toml
infra/: main.tf  variables.tf
results/analysis/: statistics.txt  summary_statistics.csv
scripts/: ObtainGridDS.py  SPNGenerate.py  StatisticsDS.py  VisualData.py  augment_data.py  cloud_run_entrypoint.py  generate_statistics.py  interactive_generator.py  optimize_gnn.py  train_gnn.py
src/spn_datasets/: __init__.py
src/spn_datasets/generator/: ArrivableGraph.py  DataTransformation.py  PetriGenerate.py  SPN.py  __init__.py  _cython_arrivable_graph.pyx  _cython_data_transformation.pyx  _cython_petri_generate.pyx  arrivable_graph.py  arrivable_graph_cy.cpp  arrivable_graph_cy.pyx  cy_arrivable_graph.pyx  cy_data_transformation.pyx  cy_petri_generate.pyx  cy_spn.pyx  data_transformation.py  dataset_generator.py  generators.py  petri_generate.py  spn.py
src/spn_datasets/gnns/: data.py  lightning_data.py  lightning_models.py  models.py  train.py
src/spn_datasets/utils/: DataUtil.py  ExcelTools.py  FileWriter.py  HDF5Reader.py  __init__.py  augment_data.py  data_util.py  excel_tools.py  file_writer.py  gcs_utils.py  generate_statistics.py  generate_statistics.py.orig  hdf5_reader.py  obtain_grid_ds.py  (+2 more)
tests/: test_ArrivableGraph.py  test_DataTransformation.py  test_PetriGenerate.py  test_SPN.py  test_arrivable_graph.py  test_augmentation.py  test_cloud_run.py  test_data_transformation.py  test_datagenerate.py  test_dataset_generator.py  test_generators.py  test_gnns.py  test_gnns_lightning.py  test_obtain_grid_ds.py  test_optimize_gnn.py  test_perf_bolt.py  test_perf_bolt_2.py  test_perf_bolt_3.py  test_perf_bolt_4.py  test_performance.py  test_spn.py  test_spn_segfault.py  test_statistics.py
utils/: DataUtil.py  ExcelTools.py  FileWriter.py  HDF5Reader.py
(+2 files in other folders)
